Correção do collect em versão java anterior.